Added img, bg-color, width to bottom play bar

--- a/style.css
+++ b/style.css
@@ -182,11 +182,6 @@ section {
     /* float: right; */
 }
 
-/* Determine font size of main content headers */
-
-
-
-
 .search {
     font-size: 1.1rem;
     margin: 0 0 0 10px ; 
@@ -276,11 +271,7 @@ section {
     text-align: center;
     height: 3vh;
     border-radius: 1.5em;
-    padding: 10px;
-    /* transform: scale(1.1);
-    transition: transform 0.3s ease; */
-    /* padding: 10px 10px 10px 10px; */ /* change to transition scale 1.1 in final version */
-}
+    padding: 10px;}
 
 .second-li li a:hover {
     background: rgba(0, 0, 0, 0.25);
@@ -309,10 +300,6 @@ section {
     display: flex;
     gap: 90px;
 }
-
-/* .discover, .radio, .podcast, .Library, .recent, .album, .song, .japansongs, .summer {
-    
-} */
 
 .main-img {
     width: 28%;
@@ -364,21 +351,75 @@ section {
     z-index: 1000;
 }
 
-/* .media-scroller {
-    margin: 0 0 0 100px;
+.bottom-container {
+    display: flex;
+    position: relative;
+    background: rgba(92, 92, 92, 1);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.61);
+    -webkit-backdrop-filter: blur( 4px );
+    height: 90px;
+    top: 370px;
+    left: 40%;
+    /* Can find a better way of making it so that the search bar doesn't go all the way
+    to the right, so it's in the main blur overlay thing */
+    margin-right: 550px; 
+    border-radius: 10px;
+}
+  
+.bottom-play {
+display: flex;
+}
+  
+.bottom-img {
+width: 90px; 
+height: auto;
+margin: 0 5px 0 5px;
+padding: 14px;
+border-radius: 20px;
+}
+  
+.column {
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+  
+/* .bottom-song-name, .bottom-song-descrip {
+margin: 5px 0;
+}
+
+.bottom-song-descrip {
+margin-top: 5px;
 } */
 
-.bottom-play {
-    position: relative;
-    background-color: black;
+.bottom-song-name {
+font-size: 1.33rem;
+}
+
+.bottom-song-descrip {
+font-size: 1.10rem;
+}
+
+/* .play-icons {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+.outer-circle {
+    background-color: blue;
+    width: 70px;
     height: 70px;
-    top: 370px;
-    left: 40%; /* Adjust the distance from the right */
-    margin: 10px; /* Add margin as needed */
-    color: #fff; /* Set text color */
-    background: rgba(255, 255, 255, 0.13); */
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.233);
-    -webkit-backdrop-filter: blur( 4px );
-    font-size: 16px; /* Set font size */
-  }
+    border-radius: 50%;
+}
+.inner-circle {
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+} */
+/* .play-icons {
+    position: absolute;
+    right: 0;
+} */
   
